# flowllm

./: .gitignore  .pre-commit-config.yaml  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  README_EN.md  README_ZH.md  company_factor_op_implementation.md  example.env  fin_supply_quick_start.md  index.html  index.md  mkdocs.yml  package-lock.json  pyproject.toml  sitemap.xml  todo.md
.github/workflows/: unittest.yml
INSTALLATION/: index.html
QUICKSTART/: index.html
async_task_handling/: index.html
company_factor_op_implementation/: index.html
deep_research/: index.html
desktop-dog/: .eslintrc.json  .gitignore  FEATURES.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  USAGE_EXAMPLES.md  env.example  index.html  package.json  tsconfig.electron.json  vite.config.ts
desktop-dog/electron/: main.ts
desktop-dog/scripts/: build.sh  dev.sh
desktop-dog/src/: App.css  App.tsx  vite-env.d.ts
doc/: deep_research.md  fin_supply_quick_start.md  fin_supply_readme.md  making_sop_memories.md  readme.md  roadmap.md  supply_readme.md
docs/: api.md  async_task_handling.md  configuration.md  deployment.md  operations.md  todo.md  tools.md
docs/en/: contributing.md  framework.md  quick_start.md
docs/zh/: contribute.md  contributing.md  framework.md  how_to_write_async_op.md  how_to_write_async_tool_op.md  op_readme.md  quick_start.md  todo.md
fin_supply_deploy/: index.html
fin_supply_quick_start/: index.html
fin_supply_readme/: index.html
flowllm/: __init__.py  app.bak.py  app.py  app_ui.py  application.py  constants.py  main.py  mcp_server.py
flowllm/client/: __init__.py  async_http_client.py  fastmcp_client.py  http_client.py  mcp_client.py  sync_mcp_client.py
flowllm/components/: __init__.py  application_context.py  base_component.py  component_registry.py  prompt_handler.py  runtime_context.py
flowllm/config/: base.yaml  config_parser.py  deep_search.yaml  default.yaml  default_config.yaml  empty.yaml  fin_ant.yaml  fin_basic.yaml  fin_search.yaml  fin_supply.yaml  fin_supply_http.yaml  fin_ths.yaml  finance.yaml  pydantic_config_parser.py  search.yaml
flowllm/context/: base_context.py  flow_context.py  pipeline_context.py  prompt_context.py  prompt_handler.py  registry_context.py  service_context.py
flowllm/core/: app.py  application.py
flowllm/embedding_model/: __init__.py  base_embedding_model.py  openai_compatible_embedding_model.py
flowllm/enumeration/: chunk_enum.py  component_enum.py
flowllm/extension/: __init__.py
flowllm/extensions/: __init__.py
flowllm/flow/: __init__.py  base_flow.py  base_flow_engine.py  expression_parser.py  mock_tool_flow.py  simple_flow_engine.py  tool_op_flow.py
flowllm/flow_engine/: base_flow_engine.py  simple_flow_engine.py
flowllm/gallery/: __init__.py  chat_op.py  execute_code_op.py  gen_system_prompt_op.py  llm_chat_op.py  react_search_op.py  stream_chat_op.py  think_tool_op.py  think_tool_prompt.yaml
flowllm/lite/: README.md  __init__.py  cli.py  demo.py
flowllm/llm/: __init__.py  base_llm.py  litellm_llm.py  openai_compatible_llm.py
flowllm/op/: __init__.py  base_async_op.py  base_async_tool_op.py  base_mcp_op.py  base_op.py  base_ray_op.py  mock_op.py  parallel_op.py  sequential_op.py
flowllm/pipeline/: base_pipeline.py  pipeline.py  pipeline_context.py
flowllm/schema/: __init__.py  application_config.py  emb_node.py  experience.py  flow_io.py  flow_request.py  flow_response.py  message.py  request.py  response.py  service_config.py  stream_chunk.py  tool_call.py
flowllm/service/: __init__.py  base_service.py  cmd_service.py  flowllm_service.py  http_server.py  http_service.py  mcp_server.py  mcp_service.py
making_sop_memories/: index.html
note/: context_management_design.md  self_compact_agentscope_pr.md
old/: README.md  __init__.py  ah_fix_op.py  app.py  app_ui.py  desktop_pet.py  how_to_write_async_op_advanced.md  how_to_write_async_op_simple.md  how_to_write_async_tool_op.md  mcp_server.py  pyproject.toml
test/: client_examples.py  http_client_test.py  http_proxy_server.py  mcp_client_test.py  mcp_supply_test.py  mcp_test.py  run_search.py  test_config.py  test_craw4ai.py  test_simple_flow.py  tt.py
tests/: http_client_test.py  mcp_client_test.py  test_ah.py  test_base_context.py  test_cache_handler.py  test_chroma_vector_store.py  test_ds.py  test_es_vector_store.py  test_expression_parser.py  test_extract_content.py  test_fastmcp_client.py  test_lite_llm.py  test_local_vector_store.py  test_memory_vector_store.py  test_openai_compatible_llm.py  test_qdrant_vector_store.py  test_skill_agent_flow.py  test_tool_call.py  test_vision_audio.py
tests_op/: test_dashscope_search_op.py  test_edit_op.py  test_execute_code_op.py  test_exit_plan_mode_op.py  test_gen_system_prompt_op.py  test_glob_op.py  test_grep_op.py  test_ls_op.py  test_mock_search_op.py  test_react_search_op.py  test_read_file_op.py  test_rip_grep_op.py  test_search_op.py  test_shell_op.py  test_smart_edit_op.py  test_stream_chat_op.py  test_token_count_op.py  test_write_file_op.py  test_write_todos_op.py
todo/: index.html
todo_files/: ant_op.py  cmd_flow.py  code_tool_flow.py  company_segment_factor_prompt_old.yaml  dashscope_deep_research_op.py  deepsearch_tool_flow.py  desktop_pet.py  execute_code_op.py  open_compress_prompt.yaml  react_v1_op.py  stream_llm_op.py  terminate_op.py  terminate_tool_flow.py  ths_op.py  ths_prompt.yaml
vector_store/: index.html
zh/: index.html  index.md  todo.md
(+431 files in other folders)
