[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowllm"
dynamic = ["version"]
description = "FlowLLM: Build LLM applications with ease."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "jinli.yl", email = "jinli.yl@alibaba-inc.com" },
]
keywords = ["llm", "flow", "agent", "ai", "mcp", "flowllm"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "agentscope>=2.0.2",
    "aiofiles>=24.1.0",
    "claude-agent-sdk>=0.2.91",
    "croniter>=2.0",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "pandas>=2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "tushare>=1.4",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
fl = "flowllm.lite.cli:main"
flowllm = "flowllm.application:main"

[project.urls]
Homepage = "https://github.com/flowllm-ai/flowllm"
Repository = "https://github.com/flowllm-ai/flowllm"

[tool.setuptools]
include-package-data = true
packages = { find = { where = ["."], include = ["flowllm*"] } }

[tool.setuptools.package-data]
"*" = ["py.typed", "**/*.yaml", "**/*.json"]

[tool.setuptools.dynamic]
version = { attr = "flowllm.__version__" }

[tool.pylint.format]
max-line-length = 120
